--- a/app/app/index.html
+++ b/app/app/index.html
@@ -61,7 +61,7 @@
 							</div>
 							<div class="litopr">
 								
-									 <canvas onclick="alert(jdt.vesition)" class="jdt"  id="jdt"></canvas>
+									 <canvas onclick="alert(jdt.vesition)" class="jdt"  id="cv{{tender.borrow_id}}"></canvas>
 							</div>
 						</div>
 						<div class="btom">
