--- a/app/app/index.html
+++ b/app/app/index.html
@@ -7,8 +7,11 @@
     
     <link rel="stylesheet" type="text/css" href="../css/common.css"/>
     <link rel="stylesheet" type="text/css" href="../css/index.css"/>
+    <style type="text/css">
+    	    .ng-cloak{display:none;}  
+    </style>
 </head>
-<body>
+<body ng-cloak class="ng-cloak">
 	<div class="allbox">
 		
 		 <div class="all">
